# lisp-godot

./: README.md
godot/: Node2D.gd  Node2D.tscn  bin  lisp_gdnative.gdnlib  lisp_nativescript.gdns  project.godot
rust/: Cargo.toml
rust/src/: computer.rs  lib.rs
