[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.10"
rust-lisp = { git = "https://github.com/dchiquito/rust-lisp", branch = "asyncing" }
